20011010
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/10/04 14:34:16
     [key.c]
     call OPENSSL_free() for memory allocated by openssl; from chombier@mac.com

20011007
 - (bal) ssh-copy-id corrected permissions for .ssh/ and authorized_keys.
   Prompted by Matthew Vernon <matthew@sel.cam.ac.uk> 

20011005
 - (bal) AES works under Cray, no more hack. 

20011004
 - (bal) nchan2.ms resync.  BSD License applied.

20011003
 - (bal) CVS ID fix up in version.h
 - (bal) OpenBSD CVS Sync:
   - markus@cvs.openbsd.org 2001/09/27 11:58:16
     [compress.c]
     mem leak; chombier@mac.com
   - markus@cvs.openbsd.org 2001/09/27 11:59:37
     [packet.c]
     missing called=1; chombier@mac.com
   - markus@cvs.openbsd.org 2001/09/27 15:31:17
     [auth2.c auth2-chall.c sshconnect1.c]
     typos; from solar
   - camield@cvs.openbsd.org 2001/09/27 17:53:24
     [sshd.8]
     don't talk about compile-time options
     ok markus@
   - djm@cvs.openbsd.org 2001/09/28 12:07:09
     [ssh-keygen.c]
     bzero private key after loading to smartcard; ok markus@
   - markus@cvs.openbsd.org 2001/09/28 15:46:29
     [ssh.c]
     bug: read user config first; report kaukasoi@elektroni.ee.tut.fi
   - markus@cvs.openbsd.org 2001/10/01 08:06:28
     [scp.c]
     skip filenames containing \n; report jdamery@chiark.greenend.org.uk
     and matthew@debian.org
   - markus@cvs.openbsd.org 2001/10/01 21:38:53
     [channels.c channels.h ssh.c sshd.c]
     remove ugliness; vp@drexel.edu via angelos
   - markus@cvs.openbsd.org 2001/10/01 21:51:16
     [readconf.c readconf.h ssh.1 sshconnect.c]
     add NoHostAuthenticationForLocalhost; note that the hostkey is
     now check for localhost, too.
   - djm@cvs.openbsd.org 2001/10/02 08:38:50
     [ssh-add.c]
     return non-zero exit code on error; ok markus@
   - stevesk@cvs.openbsd.org 2001/10/02 22:56:09
     [sshd.c]
     #include "channels.h" for channel_set_af()
   - markus@cvs.openbsd.org 2001/10/03 10:01:20
     [auth.c]